[package]
name = "exam_project"
version = "0.1.0"
edition = "2021"
authors = ["Caroline Høg <cph-ch465@cphbusiness.dk>, Maria McNally <cph-mm620@cphbusiness.dk>"]
description = "Rust exam"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.0"
mongodb = { version = "1.1", default-features = false, features = ["sync"] }
anyhow = "1.0"